--- a/Temas.html
+++ b/Temas.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./img/icons8-balloons-64.png" type="image/x-icon">
     <title>Rafaela Festas </title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/midia.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="midia.css">
 </head>
 <body>
     
@@ -45,7 +45,7 @@
     <div class="carousel">
         <div class="list">
             <div class="item">
-                <img src="./img/moana.png" alt="Moana">
+                <img src="/img/moana.png" alt="Moana">
                 <div class="introduce">
                     <div class="title">Disney Pixar</div>
                     <div class="topic">Moana</div>
@@ -81,14 +81,13 @@
                         </div>
                     </div>
                     <div class="checkout">
-                        <button class="verItens"> <a href="html.html">Ver itens</a></button>
-                        <button class="add-carrinho">Finalizar</button>
+                        <button class="verItens"> <a href="Itens.html">Ver itens</a></button>
                     </div>
                 </div>
             </div>
 
             <div class="item">
-                <img src="./img/barbie.png" alt="Barbie">
+                <img src="/img/barbie.png" alt="Barbie">
                 <div class="introduce">
                     <div class="title">Mattel</div>
                     <div class="topic">Barbie</div>
@@ -124,14 +123,13 @@
                         </div>
                     </div>
                     <div class="checkout">
-                        <button class="verItens"> <a href="html.html"> Ver itens </a></button>
-                        <button class="add-carrinho">Finalizar</button>
+                        <button class="verItens"><a href="itensB.html">Ver itens</a></button>
                     </div>
                 </div>
             </div>
 
             <div class="item">
-                <img src="./img/Carros.jpeg" alt="Carros">
+                <img src="/img/Carros.jpeg" alt="Carros">
                 <div class="introduce">
                     <div class="title">Disney Pixar</div>
                     <div class="topic">Carros</div>
@@ -167,142 +165,13 @@
                         </div>
                     </div>
                     <div class="checkout">
-                        <button class="verItens">Ver itens</button>
-                        <button class="add-carrinho"> <a href="html.html">Finalizar</a></button>
+                        <button class="verItens"> <a href= "ItensC.html">Ver itens </a></button>
                     </div>
                 </div>
             </div>
 
             <div class="item">
-                <img src="./img/ToyStore.png" alt="ToyStore">
-                <div class="introduce">
-                    <div class="title">Disney Pixar </div>
-                    <div class="topic">Toy Story </div>
-                    <div class="des">
-                        <!-- 20 lorem -->
-                        Uma festa inspirada em Toy Story da Disney Pixar é uma jornada emocionante para o mundo dos brinquedos, onde a imaginação ganha vida e a diversão é garantida para todos os convidados.
-                    </div>
-                    <button class="seeMore">Veja mais &#8599</button>
-                </div>
-                <div class="detail">
-                    <div class="title">Toy Stroy</div>
-                    <div class="des">
-                        <!-- lorem 50 -->
-                        Bem-vindos ao mundo mágico de Toy Story, onde os brinquedos ganham vida e as aventuras são infinitas! Prepare-se para uma festa que vai encantar crianças e adultos, transportando todos para o universo dos brinquedos favoritos das telonas.
-                    </div>
-                    <div class="specifications">
-                        <div>
-                            <p>Decoração</p>
-                            <p>Cores: roxo, marrom, azul verde e branco.</p>
-                        </div>
-                        <div>
-                            <p>Cenário:</p>
-                            <p>Quarto do andy</p>
-                        </div>
-                        <div>
-                            <p>Mesa</p>
-                            <p> Brinqudos </p>
-                        </div>
-                        <div>
-                            <p>Figuras:</p>
-                            <p>Woody,Buzz e outros </p>
-                        </div>
-                    </div>
-                    <div class="checkout">
-                        <button class="add-carrinho">  <a href="html.html">Ver Itens</a></button>
-                        <button>Finalizar</button>
-                    </div>
-                </div>
-            </div>
-
-            <div class="item">
-                <img src="./img/Bob-esponja.png">
-                <div class="introduce">
-                    <div class="title">Nick</div>
-                    <div class="topic">Bob-esponja</div>
-                    <div class="des">
-                        <!-- 20 lorem -->
-                        Bem-vindos à Fenda do Biquíni, onde a diversão é garantida e a felicidade é contagiosa! Uma festa inspirada no Bob Esponja é uma experiência incrível, cheia de cores vibrantes, personagens cativantes e muitas risadas.
-                    </div>
-                    <button class="seeMore">Veja Mais &#8599</button>
-                </div>
-                <div class="detail">
-                    <div class="title">Bob Esponja</div>
-                    <div class="des">
-                        <!-- lorem 50 -->
-                        Prepare-se para mergulhar em um mundo subaquático cheio de alegria e aventura na festa do Bob Esponja! Desde os convites até a última dança, cada momento é uma celebração do espírito divertido e positivo desse adorado desenho animado.
-                    </div>
-                    <div class="specifications">
-                        <div>
-                            <p>Decoração</p>
-                            <p>Cores no tons de amarelo;
-                                rosa;
-                                azul;
-                                vermelho</p>
-                        </div>
-                        <div>
-                            <p>Cenário:</p>
-                            <p>Fenda do Biquíni</p>
-                        </div>
-                        <div>
-                            <p>Mesa</p>
-                            <p>Decoração marítima com conchas</p>
-                        </div>
-                        <div>
-                            <p>Figuras:</p>
-                            <p>Bob, Patrick e outros </p>
-                        </div>
-                    </div>
-                    <div class="checkout">
-                        <button class="verItens"> <a href="html.html"> Ver itens </a></button>
-                        <button class="add-carrinho">Finalizar</button>
-                    </div>
-                </div>
-            </div>
-
-            <div class="item">
-                <img src="./img/princesas.jpeg" alt="Princesas disney" />
-                <div class="introduce">
-                    <div class="title">Disney Pixar</div>
-                    <div class="topic">Princesas</div>
-                    <div class="des">
-                        <!-- 20 lorem -->
-                        As Princesas da Disney Pixar são um símbolo de magia, aventura e romance. Cada uma delas possui uma história única e inspiradora, que encanta crianças e adultos ao redor do mundo.
-                    </div>
-                    <button class="seeMore">Veja mais &#8599</button>
-                </div>
-                <div class="detail">
-                    <div class="title">Princesas Disney Pixar</div>
-                    <div class="des">
-                        <!-- lorem 50 -->
-                        Bem-vindos ao reino encantado das Princesas da Disney Pixar, onde os sonhos se tornam realidade e a magia está sempre presente! Esta festa é um convite para entrar em um mundo de contos de fadas, onde cada princesa tem sua própria história cativante e inspiradora.
-                    </div>
-                    <div class="specifications">
-                        <div>
-                            <p>Decoração</p>
-                            <p>Cores no tons pasteis colorido</p>
-                        </div>
-                        <div>
-                            <p>Cenário:</p>
-                            <p>Castelos</p>
-                        </div>
-                        <div>
-                            <p>Mesa</p>
-                            <p>Decoração s varias cores</p>
-                        </div>
-                        <div>
-                            <p>Figuras:</p>
-                            <p>Bella, Cinderela e outros </p>
-                        </div>
-                    </div>
-                    <div class="checkout">
-                        <button class="verItens"> <a href="html.html"> Ver itens </a> </button>
-                        <button class="add-carrinho">Finalizar</button>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <img src="./img/Galinha.png" alt="Galinha pintadinha" />
+                <img src="/img/Galinha.png" alt="Galinha pintadinha" />
                 <div class="introduce">
                     <div class="title">Turma da Galinha</div>
                     <div class="topic">Galinha Pintadinha</div>
@@ -337,90 +206,7 @@
                         </div>
                     </div>
                     <div class="checkout">
-                        <button class="verItens">  <a href="html.html">Ver itens </a></button>
-                        <button class="add-carrinho">Finalizar</button>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <img src="./img/Ben-10.png" alt="Ben 10" />
-                <div class="introduce">
-                    <div class="title">Cartoon</div>
-                    <div class="topic">Ben 10</div>
-                    <div class="des">
-                        <!-- 20 lorem -->
-                    Uma festa inspirada em Ben 10 é uma oportunidade emocionante para os fãs mergulharem no mundo dos extraterrestres, dos poderes alienígenas e das batalhas intergalácticas.
-                    </div>
-                    <button class="seeMore">Veja mais &#8599</button>
-                </div>
-                <div class="detail">
-                    <div class="title">Ben 10  Ultimate Collector's Edition</div>
-                    <div class="des">
-                        <!-- lorem 50 -->
-                        Prepare-se para embarcar em uma jornada épica pelo cosmos na festa do Ben 10! Desde os convites até a última batalha contra vilões alienígenas, cada momento é uma experiência emocionante que desafia a imaginação e a coragem.
-                    </div>
-                    <div class="specifications">
-                        <div>
-                            <p>Decoração</p>
-                            <p>Cores no tons de verde, branco e preto</p>
-                        </div>
-                        <div>
-                            <p>Cenário:</p>
-                            <p>Extra-terrestre</p>
-                        </div>
-                        <div>
-                            <p>Mesa</p>
-                            <p>Decoração spacial</p>
-                        </div>
-                        <div>
-                            <p>Figuras:</p>
-                            <p>Ben 10, aliens e outros </p>
-                        </div>
-                    </div>
-                    <div class="checkout">
-                        <button class="add-carrinho"> <a href="html.html">ver itens</a></button>
-                        <button>Finalizar</button>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <img src="./img/Mickey mouse.png" alt="Ben 10" />
-                <div class="introduce">
-                    <div class="title">Disney Pixar</div>
-                    <div class="topic">Mickey Mouse</div>
-                    <div class="des">
-                        <!-- 20 lorem -->
-                        Bem-vindos ao mundo mágico da Turma do Mickey Mouse, onde a diversão é garantida e a alegria é contagiante! É uma oportunidade para celebrar a amizade, a imaginação e as aventuras inesquecíveis ao lado dos personagens mais queridos da Disney.
-                    </div>
-                    <button class="seeMore">Veja mais &#8599</button>
-                </div>
-                <div class="detail">
-                    <div class="title">Mickey Mouse Disney Pixar</div>
-                    <div class="des">
-                        <!-- lorem 50 -->
-                        Prepare-se para uma festa cheia de magia e diversão na companhia do Mickey, Minnie, Pato Donald, Margarida, Pluto e toda a Turma do Mickey Mouse! Desde os convites até a última dança, cada momento é uma celebração do espírito de amizade e alegria que torna essa turma tão especial.
-                    </div>
-                    <div class="specifications">
-                        <div>
-                            <p>Decoração</p>
-                            <p>Cores no tons de Vermelho, Azul, Amarelo</p>
-                        </div>
-                        <div>
-                            <p>Cenário:</p>
-                            <p>Disney</p>
-                        </div>
-                        <div>
-                            <p>Mesa</p>
-                            <p>Decoração com bolinhas brancas e vermelhas</p>
-                        </div>
-                        <div>
-                            <p>Figuras:</p>
-                            <p>Minne, Mickey e outros </p>
-                        </div>
-                    </div>
-                    <div class="checkout">
-                        <button class="verItens"> <a href="html.html">Ver itens </a></button>
-                        <button class="add-carrinho">Finalizar</button>
+                        <button class="verItens">  <a href="ItensG.html">Ver itens </a></button>
                     </div>
                 </div>
             </div>
@@ -431,21 +217,6 @@
             <button id="back">Voltar &#8599</button>
         </div>
     </div>
-
-    <table id="carrinho">
-        <thead>
-            <tr>
-                <th>Item</th>
-                <th>Quantidade</th>
-                <th>Opções</th>
-            </tr>
-        </thead>
-        <tbody>
-            <!-- Aqui serão inseridos os itens adicionados ao carrinho -->
-            <!-- Exemplo de um item na tabela -->
-            
-        </tbody>
-    </table>
-    <script src="./js/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
