--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 
     <!-- link file css -->
-    <link rel="stylesheet" href="./css/midia.css">
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/Inicio.css">
+    <link rel="stylesheet" href="midia.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="Inicio.css">
 
     <!-- links Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
