--- a/ItensG.html
+++ b/ItensG.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Compras</title>
+    <title>Itens </title>
 
     <!-- CSS -->
     <link rel="shortcut icon" type="imagem/x-icon" href="img/debit-card.png">
@@ -19,7 +19,7 @@
             <div class="nav-wrapper">
                 <form>
                     <div class="hide-on-med-and-down">
-                        <a href="#" class="brand-logo center blue-text">Itens da Galinha Pintadinha</a>
+                        <a href="#" class="brand-logo center blue-text">Itens Da Festa Turma da Galinha</a>
                     </div>
                 </form>
             </div>
@@ -39,76 +39,50 @@
                             <table class="responsive-table center">
                                 <tbody id="carrinho">
                                     <tr class="center" id="produto1">
-                                        <td><img width="100px" src="img/galinha-decoracao.png"></td>
-                                        <td>Decoração Galinha Pintadinha<br>R$160,00</td>
+                                        <td>Decoração Galinha <br></td>
                                         <!-- ADICIONAR AO CARRINHO -->
-                                        <td><i onclick="adicionarItem(1)" class="material-icons green-text" style="cursor: pointer;">add_circle</i></td>
-                                        <td>
-                                            <p id="quantidade1">0</p>
-                                        </td>
-                                        <!-- REMOVER DO CARRINHO -->
-                                        <td><i onclick="removerItem(1)" class="material-icons red-text" style="cursor: pointer;">remove_circle</i></td>
-                                        <td>
-                                            Total<br>R$<span id="total1">00,00</span>
-                                        </td>
                                         <!-- REMOVER PRODUTO DA LISTA -->
                                         <td><i onclick="removerProduto(1)" class="material-icons blue-text text-darken-1" style="cursor: pointer">delete</i></td>
                                     </tr>
                                     <tr id="produto2">
-                                        <td><img width="100px" src="img/galinha-fantasia.png"></td>
-                                        <td>Fantasia Galinha Pintadinha<br>R$190,00</td>
+                                        <td>Fantasia da Galinha <br></td>
                                         <!-- ADICIONAR AO CARRINHO -->
-                                        <td><i onclick="adicionarItem(2)" class="material-icons green-text" style="cursor: pointer;">add_circle</i></td>
-                                        <td>
-                                            <p id="quantidade2">0</p>
-                                        </td>
-                                        <!-- REMOVER DO CARRINHO -->
-                                        <td><i onclick="removerItem(2)" class="material-icons red-text" style="cursor: pointer;">remove_circle</i></td>
-                                        <td>
-                                            Total<br>R$<span id="total2">00,00</span>
-                                        </td>
                                         <!-- REMOVER PRODUTO DA LISTA -->
                                         <td><i onclick="removerProduto(2)" class="material-icons blue-text text-darken-1" style="cursor: pointer">delete</i></td>
                                     </tr>
                                     <tr id="produto3">
-                                        <td><img width="100px" src="img/galinha-lembrancinha.png"></td>
-                                        <td>Lembrancinha Galinha Pintadinha<br>R$45,00</td>
+                                        <td>Lembrancinha Galinha <br></td>
                                         <!-- ADICIONAR AO CARRINHO -->
                                         <td><i onclick="adicionarItem(3)" class="material-icons green-text" style="cursor: pointer;">add_circle</i></td>
                                         <td>
-                                            <p id="quantidade3">0</p>
                                         </td>
                                         <!-- REMOVER DO CARRINHO -->
-                                        <td><i onclick="removerItem(3)" class="material-icons red-text" style="cursor: pointer;">remove_circle</i></td>
-                                        <td>Total<br>R$<span id="total3">00,00</span></td>
                                         <td><i onclick="removerProduto(3)" class="material-icons blue-text text-darken-1" style="cursor: pointer">delete</i></td>
                                     </tr>
                                     <tr id="produto4">
-                                        <td><img width="100px" src="img/galinha-boneco.png"></td>
-                                        <td>Boneco Galinha Pintadinha<br>R$110,00</td>
-                                        <td><i onclick="adicionarItem(4)" class="material-icons green-text" style="cursor: pointer;">add_circle</i></td>
-                                        <td><p id="quantidade4">0</p></td>
-                                        <td><i onclick="removerItem(4)" class="material-icons red-text" style="cursor: pointer;">remove_circle</i></td>
-                                        <td>Total<br>R$<span id="total4">00,00</span></td>
+                                    
+                                        <td>Boneco da turma <br></td>
                                         <td><i onclick="removerProduto(4)" class="material-icons blue-text text-darken-1" style="cursor: pointer">delete</i></td>
                                     </tr>
                                     <tr id="produto5">
-                                        <td><img width="100px" src="img/galinha-cenario.png"></td>
-                                        <td>Cenário Galinha Pintadinha<br>R$260,00</td>
-                                        <td><i onclick="adicionarItem(5)" class="material-icons green-text" style="cursor: pointer;">add_circle</i></td>
-                                        <td><p id="quantidade5">0</p></td>
-                                        <td><i onclick="removerItem(5)" class="material-icons red-text" style="cursor: pointer;">remove_circle</i></td>
-                                        <td>Total<br>R$<span id="total5">00,00</span></td>
+                                        <td>Cenário Galinha <br></td>
                                         <td><i onclick="removerProduto(5)" class="material-icons blue-text text-darken-1" style="cursor: pointer">delete</i></td>
                                     </tr>
                                     <tr id="produto6">
-                                        <td><img width="100px" src="img/galinha-baloes.png"></td>
-                                        <td>Balões Galinha Pintadinha<br>R$25,00</td>
-                                        <td><i onclick="adicionarItem(6)" class="material-icons green-text" style="cursor: pointer;">add_circle</i></td>
-                                        <td><p id="quantidade6">0</p></td>
-                                        <td><i onclick="removerItem(6)" class="material-icons red-text" style="cursor: pointer;">remove_circle</i></td>
-                                        <td>Total<br>R$<span id="total6">00,00</span></td>
+                                        <td>Balões Galinha <br></td>
                                         <td><i onclick="removerProduto(6)" class="material-icons blue-text text-darken-1" style="cursor: pointer">delete</i></td>
+                                    </tr>
+                                    <tr id="produto7">
+                                        <td>Cenário Galinha <br></td>
+                                        <td><i onclick="removerProduto(7)" class="material-icons blue-text text-darken-1" style="cursor: pointer">delete</i></td>
+                                    </tr>
+                                    <tr id="produto7">
+                                        <td>Mesa Galinha<br></td>
+                                        <td><i onclick="removerProduto(7)" class="material-icons blue-text text-darken-1" style="cursor: pointer">delete</i></td>
+                                    </tr>
+                                    <tr id="produto8">
+                                        <td>Torre de Decoração<br></td>
+                                        <td><i onclick="removerProduto(8)" class="material-icons blue-text text-darken-1" style="cursor: pointer">delete</i></td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -116,13 +90,12 @@
                         </div>
                         <!-- VALOR TOTAL DOS ITENS ADICIONADOS AO CARRINHO -->
                         <div class="s12 l6 offset-l6">
-                            <h2 class="blue-text text-darken-1 flow-text">Valor Total da Compra: R$<span id="valorTotalCompra">00,00</span></h2>
                         </div>
                     </fieldset>
                     <br>
                     <!-- FINALIZA A COMPRA E RESETA O CARRINHO -->
                     <div class="col s12 l4 offset-l4">
-                        <button class="btn waves-light waves-effect red white-text" onclick="finalizarCompra()">FINALIZAR COMPRA</button>
+                        <button class="btn waves-light waves-effect red white-text" onclick="finalizarCompra()">Voltar</button>
                     </div>
                 </div>
             </form>
