--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <!-- link icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <link rel="html" href="">
 
     <!-- link file css -->
     <link rel="stylesheet" href="midia.css">
