--- a/itensB.html
+++ b/itensB.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Compras</title>
+    <title> Itens </title>
 
     <!-- CSS -->
     <link rel="shortcut icon" type="imagem/x-icon" href="img/debit-card.png">
@@ -39,76 +39,47 @@
                             <table class="responsive-table center">
                                 <tbody id="carrinho">
                                     <tr class="center" id="produto1">
-                                        <td><img width="100px" src="img/barbie-decoracao.png"></td>
-                                        <td>Decoração Barbie<br>R$150,00</td>
+                                        <td>Decoração Barbie<br></td>
                                         <!-- ADICIONAR AO CARRINHO -->
-                                        <td><i onclick="adicionarItem(1)" class="material-icons green-text" style="cursor: pointer;">add_circle</i></td>
-                                        <td>
-                                            <p id="quantidade1">0</p>
-                                        </td>
-                                        <!-- REMOVER DO CARRINHO -->
-                                        <td><i onclick="removerItem(1)" class="material-icons red-text" style="cursor: pointer;">remove_circle</i></td>
-                                        <td>
-                                            Total<br>R$<span id="total1">00,00</span>
-                                        </td>
+                                    
                                         <!-- REMOVER PRODUTO DA LISTA -->
                                         <td><i onclick="removerProduto(1)" class="material-icons blue-text text-darken-1" style="cursor: pointer">delete</i></td>
                                     </tr>
                                     <tr id="produto2">
-                                        <td><img width="100px" src="img/barbie-fantasia.png"></td>
-                                        <td>Fantasia Barbie<br>R$200,00</td>
+                                        <td>Fantasia Barbie<br></td>
                                         <!-- ADICIONAR AO CARRINHO -->
-                                        <td><i onclick="adicionarItem(2)" class="material-icons green-text" style="cursor: pointer;">add_circle</i></td>
-                                        <td>
-                                            <p id="quantidade2">0</p>
-                                        </td>
-                                        <!-- REMOVER DO CARRINHO -->
-                                        <td><i onclick="removerItem(2)" class="material-icons red-text" style="cursor: pointer;">remove_circle</i></td>
-                                        <td>
-                                            Total<br>R$<span id="total2">00,00</span>
-                                        </td>
                                         <!-- REMOVER PRODUTO DA LISTA -->
                                         <td><i onclick="removerProduto(2)" class="material-icons blue-text text-darken-1" style="cursor: pointer">delete</i></td>
                                     </tr>
                                     <tr id="produto3">
-                                        <td><img width="100px" src="img/barbie-lembrancinha.png"></td>
-                                        <td>Lembrancinha Barbie<br>R$50,00</td>
+                                        <td>Lembrancinha Barbie<br></td>
                                         <!-- ADICIONAR AO CARRINHO -->
-                                        <td><i onclick="adicionarItem(3)" class="material-icons green-text" style="cursor: pointer;">add_circle</i></td>
-                                        <td>
-                                            <p id="quantidade3">0</p>
-                                        </td>
-                                        <!-- REMOVER DO CARRINHO -->
-                                        <td><i onclick="removerItem(3)" class="material-icons red-text" style="cursor: pointer;">remove_circle</i></td>
-                                        <td>Total<br>R$<span id="total3">00,00</span></td>
                                         <td><i onclick="removerProduto(3)" class="material-icons blue-text text-darken-1" style="cursor: pointer">delete</i></td>
                                     </tr>
                                     <tr id="produto4">
-                                        <td><img width="100px" src="img/barbie-boneco.png"></td>
-                                        <td>Boneco Barbie<br>R$120,00</td>
-                                        <td><i onclick="adicionarItem(4)" class="material-icons green-text" style="cursor: pointer;">add_circle</i></td>
-                                        <td><p id="quantidade4">0</p></td>
-                                        <td><i onclick="removerItem(4)" class="material-icons red-text" style="cursor: pointer;">remove_circle</i></td>
-                                        <td>Total<br>R$<span id="total4">00,00</span></td>
+                                    
+                                        <td>Boneco Barbie<br></td>
                                         <td><i onclick="removerProduto(4)" class="material-icons blue-text text-darken-1" style="cursor: pointer">delete</i></td>
                                     </tr>
                                     <tr id="produto5">
-                                        <td><img width="100px" src="img/barbie-cenario.png"></td>
-                                        <td>Cenário Barbie<br>R$250,00</td>
-                                        <td><i onclick="adicionarItem(5)" class="material-icons green-text" style="cursor: pointer;">add_circle</i></td>
-                                        <td><p id="quantidade5">0</p></td>
-                                        <td><i onclick="removerItem(5)" class="material-icons red-text" style="cursor: pointer;">remove_circle</i></td>
-                                        <td>Total<br>R$<span id="total5">00,00</span></td>
+                                        <td>Cenário Barbie<br></td>
                                         <td><i onclick="removerProduto(5)" class="material-icons blue-text text-darken-1" style="cursor: pointer">delete</i></td>
                                     </tr>
                                     <tr id="produto6">
-                                        <td><img width="100px" src="img/barbie-baloes.png"></td>
-                                        <td>Balões Barbie<br>R$30,00</td>
-                                        <td><i onclick="adicionarItem(6)" class="material-icons green-text" style="cursor: pointer;">add_circle</i></td>
-                                        <td><p id="quantidade6">0</p></td>
-                                        <td><i onclick="removerItem(6)" class="material-icons red-text" style="cursor: pointer;">remove_circle</i></td>
-                                        <td>Total<br>R$<span id="total6">00,00</span></td>
+                                        <td>Balões Barbie<br></td>
                                         <td><i onclick="removerProduto(6)" class="material-icons blue-text text-darken-1" style="cursor: pointer">delete</i></td>
+                                    </tr>
+                                    <tr id="produto7">
+                                        <td>Cenário Barbie<br></td>
+                                        <td><i onclick="removerProduto(7)" class="material-icons blue-text text-darken-1" style="cursor: pointer">delete</i></td>
+                                    </tr>
+                                    <tr id="produto7">
+                                        <td>Mesa Barbie<br></td>
+                                        <td><i onclick="removerProduto(7)" class="material-icons blue-text text-darken-1" style="cursor: pointer">delete</i></td>
+                                    </tr>
+                                    <tr id="produto8">
+                                        <td>Torre de Decoração<br></td>
+                                        <td><i onclick="removerProduto(8)" class="material-icons blue-text text-darken-1" style="cursor: pointer">delete</i></td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -116,13 +87,12 @@
                         </div>
                         <!-- VALOR TOTAL DOS ITENS ADICIONADOS AO CARRINHO -->
                         <div class="s12 l6 offset-l6">
-                            <h2 class="blue-text text-darken-1 flow-text">Valor Total da Compra: R$<span id="valorTotalCompra">00,00</span></h2>
                         </div>
                     </fieldset>
                     <br>
                     <!-- FINALIZA A COMPRA E RESETA O CARRINHO -->
                     <div class="col s12 l4 offset-l4">
-                        <button class="btn waves-light waves-effect red white-text" onclick="finalizarCompra()">FINALIZAR COMPRA</button>
+                        <button class="btn waves-light waves-effect red white-text" onclick="finalizarCompra()">Voltar</button>
                     </div>
                 </div>
             </form>
