--- a/ItensC.html
+++ b/ItensC.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Compras</title>
+    <title>Itens</title>
 
     <!-- CSS -->
     <link rel="shortcut icon" type="imagem/x-icon" href="img/debit-card.png">
@@ -19,7 +19,7 @@
             <div class="nav-wrapper">
                 <form>
                     <div class="hide-on-med-and-down">
-                        <a href="#" class="brand-logo center blue-text">Itens Temáticos de Carros</a>
+                        <a href="#" class="brand-logo center blue-text">Itens Da Festa Carros</a>
                     </div>
                 </form>
             </div>
@@ -39,76 +39,47 @@
                             <table class="responsive-table center">
                                 <tbody id="carrinho">
                                     <tr class="center" id="produto1">
-                                        <td><img width="100px" src="img/carros-decoracao.png"></td>
-                                        <td>Decoração de Carros<br>R$180,00</td>
+                                        <td>Decoração Carros<br></td>
                                         <!-- ADICIONAR AO CARRINHO -->
-                                        <td><i onclick="adicionarItem(1)" class="material-icons green-text" style="cursor: pointer;">add_circle</i></td>
-                                        <td>
-                                            <p id="quantidade1">0</p>
-                                        </td>
                                         <!-- REMOVER DO CARRINHO -->
-                                        <td><i onclick="removerItem(1)" class="material-icons red-text" style="cursor: pointer;">remove_circle</i></td>
-                                        <td>
-                                            Total<br>R$<span id="total1">00,00</span>
-                                        </td>
                                         <!-- REMOVER PRODUTO DA LISTA -->
                                         <td><i onclick="removerProduto(1)" class="material-icons blue-text text-darken-1" style="cursor: pointer">delete</i></td>
                                     </tr>
                                     <tr id="produto2">
-                                        <td><img width="100px" src="img/carros-fantasia.png"></td>
-                                        <td>Fantasia de Carros<br>R$220,00</td>
+                                        <td>Fantasia Carros<br></td>
                                         <!-- ADICIONAR AO CARRINHO -->
-                                        <td><i onclick="adicionarItem(2)" class="material-icons green-text" style="cursor: pointer;">add_circle</i></td>
-                                        <td>
-                                            <p id="quantidade2">0</p>
-                                        </td>
-                                        <!-- REMOVER DO CARRINHO -->
-                                        <td><i onclick="removerItem(2)" class="material-icons red-text" style="cursor: pointer;">remove_circle</i></td>
-                                        <td>
-                                            Total<br>R$<span id="total2">00,00</span>
-                                        </td>
                                         <!-- REMOVER PRODUTO DA LISTA -->
                                         <td><i onclick="removerProduto(2)" class="material-icons blue-text text-darken-1" style="cursor: pointer">delete</i></td>
                                     </tr>
                                     <tr id="produto3">
-                                        <td><img width="100px" src="img/carros-lembrancinha.png"></td>
-                                        <td>Lembrancinha de Carros<br>R$40,00</td>
+                                        <td>Lembrancinha Carros<br></td>
                                         <!-- ADICIONAR AO CARRINHO -->
-                                        <td><i onclick="adicionarItem(3)" class="material-icons green-text" style="cursor: pointer;">add_circle</i></td>
-                                        <td>
-                                            <p id="quantidade3">0</p>
-                                        </td>
-                                        <!-- REMOVER DO CARRINHO -->
-                                        <td><i onclick="removerItem(3)" class="material-icons red-text" style="cursor: pointer;">remove_circle</i></td>
-                                        <td>Total<br>R$<span id="total3">00,00</span></td>
                                         <td><i onclick="removerProduto(3)" class="material-icons blue-text text-darken-1" style="cursor: pointer">delete</i></td>
                                     </tr>
                                     <tr id="produto4">
-                                        <td><img width="100px" src="img/carros-boneco.png"></td>
-                                        <td>Boneco de Carros<br>R$130,00</td>
-                                        <td><i onclick="adicionarItem(4)" class="material-icons green-text" style="cursor: pointer;">add_circle</i></td>
-                                        <td><p id="quantidade4">0</p></td>
-                                        <td><i onclick="removerItem(4)" class="material-icons red-text" style="cursor: pointer;">remove_circle</i></td>
-                                        <td>Total<br>R$<span id="total4">00,00</span></td>
+                                    
+                                        <td>Boneco Carros<br></td>
                                         <td><i onclick="removerProduto(4)" class="material-icons blue-text text-darken-1" style="cursor: pointer">delete</i></td>
                                     </tr>
                                     <tr id="produto5">
-                                        <td><img width="100px" src="img/carros-cenario.png"></td>
-                                        <td>Cenário de Carros<br>R$280,00</td>
-                                        <td><i onclick="adicionarItem(5)" class="material-icons green-text" style="cursor: pointer;">add_circle</i></td>
-                                        <td><p id="quantidade5">0</p></td>
-                                        <td><i onclick="removerItem(5)" class="material-icons red-text" style="cursor: pointer;">remove_circle</i></td>
-                                        <td>Total<br>R$<span id="total5">00,00</span></td>
+                                        <td>Cenário Carros<br></td>
                                         <td><i onclick="removerProduto(5)" class="material-icons blue-text text-darken-1" style="cursor: pointer">delete</i></td>
                                     </tr>
                                     <tr id="produto6">
-                                        <td><img width="100px" src="img/carros-baloes.png"></td>
-                                        <td>Balões de Carros<br>R$35,00</td>
-                                        <td><i onclick="adicionarItem(6)" class="material-icons green-text" style="cursor: pointer;">add_circle</i></td>
-                                        <td><p id="quantidade6">0</p></td>
-                                        <td><i onclick="removerItem(6)" class="material-icons red-text" style="cursor: pointer;">remove_circle</i></td>
-                                        <td>Total<br>R$<span id="total6">00,00</span></td>
+                                        <td>Balões Carros <br></td>
                                         <td><i onclick="removerProduto(6)" class="material-icons blue-text text-darken-1" style="cursor: pointer">delete</i></td>
+                                    </tr>
+                                    <tr id="produto7">
+                                        <td>Cenário Carros <br></td>
+                                        <td><i onclick="removerProduto(7)" class="material-icons blue-text text-darken-1" style="cursor: pointer">delete</i></td>
+                                    </tr>
+                                    <tr id="produto7">
+                                        <td>Mesa Carros<br></td>
+                                        <td><i onclick="removerProduto(7)" class="material-icons blue-text text-darken-1" style="cursor: pointer">delete</i></td>
+                                    </tr>
+                                    <tr id="produto8">
+                                        <td>Torre de Decoração<br></td>
+                                        <td><i onclick="removerProduto(8)" class="material-icons blue-text text-darken-1" style="cursor: pointer">delete</i></td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -116,17 +87,19 @@
                         </div>
                         <!-- VALOR TOTAL DOS ITENS ADICIONADOS AO CARRINHO -->
                         <div class="s12 l6 offset-l6">
-                            <h2 class="blue-text text-darken-1 flow-text">Valor Total da Compra: R$<span id="valorTotalCompra">00,00</span></h2>
                         </div>
                     </fieldset>
                     <br>
                     <!-- FINALIZA A COMPRA E RESETA O CARRINHO -->
                     <div class="col s12 l4 offset-l4">
-                        <button class="btn waves-light waves-effect red white-text" onclick="finalizarCompra()">FINALIZAR COMPRA</button>
+                        <button class="btn waves-light waves-effect red white-text" onclick="finalizarCompra()">Voltar</button>
                     </div>
                 </div>
             </form>
         </div>
     </main>
+
 </body>
+
 </html>
+
