--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 
     <!-- link icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-    <link rel="html" href="">
 
     <!-- link file css -->
     <link rel="stylesheet" href="midia.css">
-    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="Inicio.css">
 
     <!-- links Bootstrap -->
@@ -231,7 +229,7 @@
       crossorigin="anonymous"></script>  
       
       <!-- Link de arquivo JavaScript não sei para que serve -->
-  <script src="./js/scripts.js"></script>
+  <script type="module" src="./scripts.js"></script>
 
   <!-- 
     - ionicon
