--- a/Temas.html
+++ b/Temas.html
@@ -45,7 +45,7 @@
     <div class="carousel">
         <div class="list">
             <div class="item">
-                <img src="/img/moana.png" alt="Moana">
+                <img src="./img/moana.png" alt="Moana">
                 <div class="introduce">
                     <div class="title">Disney Pixar</div>
                     <div class="topic">Moana</div>
@@ -87,7 +87,7 @@
             </div>
 
             <div class="item">
-                <img src="/img/barbie.png" alt="Barbie">
+                <img src="./img/barbie.png" alt="Barbie">
                 <div class="introduce">
                     <div class="title">Mattel</div>
                     <div class="topic">Barbie</div>
@@ -129,7 +129,7 @@
             </div>
 
             <div class="item">
-                <img src="/img/Carros.jpeg" alt="Carros">
+                <img src="./img/Carros.jpeg" alt="Carros">
                 <div class="introduce">
                     <div class="title">Disney Pixar</div>
                     <div class="topic">Carros</div>
@@ -171,7 +171,7 @@
             </div>
 
             <div class="item">
-                <img src="/img/Galinha.png" alt="Galinha pintadinha" />
+                <img src="./img/Galinha.png" alt="Galinha pintadinha" />
                 <div class="introduce">
                     <div class="title">Turma da Galinha</div>
                     <div class="topic">Galinha Pintadinha</div>
