--- a/ItensG.html
+++ b/ItensG.html
@@ -95,7 +95,8 @@
                     <br>
                     <!-- FINALIZA A COMPRA E RESETA O CARRINHO -->
                     <div class="col s12 l4 offset-l4">
-                        <button class="btn waves-light waves-effect red white-text" onclick="finalizarCompra()">Voltar</button>
+                        <button type="submit" class="btn waves-light waves-effect red white-text btn-voltar">Voltar</button>
+                        <button type="button" class="btn waves-light waves-effect green white-text btn-confirmar">Confirmar</button>
                     </div>
                 </div>
             </form>
